[tool.poetry]
name = "pimoroni-blinkt-unit-test"
version = "0.1.0"
description = "TDD example for the Pimoroni Blinkt!"
authors = ["Nathan Young"]
license = "Apache-2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10.13"
rp2040-pio-emulator = "0.83.0"
pytest = "8.0.1"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
