[tool.poetry]
name = "pimoroni-blinkt-unit-test"
version = "0.1.1"
description = "TDD example for the Pimoroni Blinkt!"
authors = ["Nathan Young"]
license = "Apache-2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
rp2040-pio-emulator = "0.84.0"
pytest = "8.3.4"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
