[tool.poetry]
name = "pio2fst"
version = "0.1.1"
description = "Creates Fast Signal Trace files suitable for analysis by GTKWave"
authors = ["Nathan Young"]
license = "Apache-2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
adafruit-circuitpython-pioasm = "1.3.2"
click = "8.1.8"
pylibfst = "0.2.0"
rp2040-pio-emulator = "0.84.0"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pio2fst = "pio2fst.__main__:run"
